--- a/generic-generate/src/main/resources/generator.properties
+++ b/generic-generate/src/main/resources/generator.properties
@@ -1,8 +1,8 @@
 #\u4EE3\u7801\u751F\u6210\u5668\uFF0C\u914D\u7F6E\u4FE1\u606F
 
-mainPath=com.generic
+mainPath=com.generic.common.util
 #\u5305\u540D
-package=com.generic.entity
+package=com.generic
 moduleName=generator
 #\u4F5C\u8005
 author=liuyuzhu
