--- a/generic-generate/src/main/resources/application.yml
+++ b/generic-generate/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
         driverClassName: com.mysql.jdbc.Driver
         url: jdbc:mysql://localhost:3306/personal?useUnicode=true&characterEncoding=UTF-8
         username: root
-        password: 123456
+        password: Woshizhu~!@#1314
     jackson:
         time-zone: GMT+8
         date-format: yyyy-MM-dd HH:mm:ss
